--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@ map:
 <div class="map" id="map"></div>
 
 
+{% if false %}
 <div class="contact-box">
 	<form action="{{ site.baseurl }}/contact-success/" method="post" class="contact-form">
 		<input type="hidden" name="_to" value="support@example.com" />
@@ -37,6 +38,7 @@ map:
 		<p><a href="mailto:support@example.com">support@example.com</a></p>
 	</div>
 </div>
+{% endif %}
 
 <script type="text/javascript">
 	window.mapData = {{ page.map | jsonify }};
