--- a/index.html
+++ b/index.html
@@ -1,69 +1,120 @@
 ---
 title: The last sales CRM you'll ever need
 description: Track and optimize your sales team in real time
+
+hero:
+  enabled: true
+  header: "Connecting <strong>product developers</strong> with <strong>OEM's<strong>"
+  text: Find suitable OEM's for your product and start manufacturing today!
+  action:
+    enabled: true
+    label: Start a new Product
+    link: /get-started/
+  screenshot:
+    enabled: true
+    description: Screenshot
+    path: /images/dashboard.png
+
+banners:
+  enabled: true
+  content:
+    -
+      title: "Find <strong>compatible manufacturers</strong>"
+      text: "We connect product developers with the right parties around the world to get your manufacturing done."
+      image:
+        path: /images/dashboard.png
+        description: An important dashboard image that demonstrations blah
+    -
+      title: "<strong>Increase</strong> your <strong>time to market</strong>"
+      text: "Try less DIY-style and collaborate with industry professionals to move efficient and fast."
+      image:
+        path: /images/dashboard.png
+        description: An important dashboard image that demonstrations blah
+    -
+      title: "Better project management experience"
+      text: "The entire workflow from conception to boxing captured to allow you an improved overview of your project's life."
+      image:
+        path: /images/dashboard.png
+        description: An important dashboard image that demonstrations blah
+
+testimonials:
+  enabled: true
+  content:
+    -
+      person:
+        name: Blah
+        image: https://source.unsplash.com/6anudmpILw4/600x400
+        role: CEO of Acme Corp.
+      text: Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.
+    -
+      person:
+        name: Blah
+        image: https://source.unsplash.com/6anudmpILw4/600x400
+        role: CEO of Acme Corp.
+      text: Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.
+
+bottom:
+  enabled: true
+  header: "<strong>Manufacture</strong> your product now"
+  action:
+    label: "Start Manufacturing Now"
+    link: "#"
 ---
+
+{% if page.hero.enabled == true %}
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
-		<p class="subtext editable">Track and optimize your sales team in real time.</p>
-		<div class="cta button alt"><a href="/sign-up/">Get Started Free</a></div>
+		<h1 class="editable">{{ page.hero.header }}</h1>
+		<p class="subtext editable">{{ page.hero.text }}</p>
+		{% if page.hero.action.enabled == true %}
+		<div class="cta button alt"><a href="{{ page.hero.action.link }}">{{ page.hero.action.label }}</a></div>
+		{% endif %}
+		{% if page.hero.screenshot.enabled == true %}
 		<div>
-			<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+			<img src="{{ page.hero.screenshot.path }}" alt="{{ page.hero.screenshot.description}}" class="screenshot editable" />
 		</div>
+		{% endif %}
 	</div>
 </section>
+{% endif %}
 
 <div class="content">
+	{% if page.banners.enabled == true %}
+	{% for item in page.banners.content %}
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can we <strong>double</strong> our sales revenue?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources. </p>
+				<h2>{{ item.title }}</h2>
+				<p>{{ item.text }}</p>
 			</div>
 			<div class="image">
-				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ item.image.path }}" alt="{{ item.image.description}}" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
+	{% endfor %}
+	{% endif %}
 
-	<section>
-		<div class="container flex">
-			<div class="text editable">
-				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
-			</div>
-			<div class="image">
-				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
-			</div>
-		</div>
-	</section>
-
-	<section>
-		<div class="container flex">
-			<div class="text editable">
-				<h2>How can I <strong>forecast</strong> the next 90 days?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
-			</div>
-			<div class="image">
-				<img src="/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
-			</div>
-		</div>
-	</section>
-
+	{% if page.testimonials.enabled == true %}
+	{% for testimonial in page.testimonials.content %}
 	<section class="testimonial">
 		<div class="container flex">
 			<div class="testimonial-block">
-				<div class="square-image"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" class="editable"></div>
+				<div class="square-image"><img src="{{ testimonial.person.image }}" alt="Image of {{ testimonial.person.name }}" class="editable"></div>
 				<blockquote>
-					<p class="editable">Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.</p>
-					<p class="editable author">Jim James - CEO of Global Corp.</p>
+					<p class="editable">{{ testimonial.text }}</p>
+					<p class="editable author">{{ testimonial.person.name }} - {{ testimonial.person.role }}</p>
 				</blockquote>
 			</div>
 		</div>
 	</section>
+	{% endfor %}
+	{% endif %}
 
+	{% if page.bottom %}
 	<section class="bottom-cta">
-		<h2 class="editable"><strong>Improve</strong> your sales process today</h2>
-		<div class="button alt"><a href="#">Get Started Free</a></div>
+		<h2 class="editable">{{ page.bottom.header }}</h2>
+		<div class="button alt"><a href="{{ page.bottom.action.link }}">{{ page.bottom.action.label }}</a></div>
 	</section>
+	{% endif %}
 </div>
