Fix lacking close on strong text in hero

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ description: Track and optimize your sales team in real time
 
 hero:
   enabled: true
-  header: "Connecting <strong>product developers</strong> with <strong>OEM's<strong>"
+  header: "Connecting <strong>product developers</strong> with <strong>OEM's</strong>"
   text: Find suitable OEM's for your product and start manufacturing today!
   action:
     enabled: true
