small updates to site text

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ description: Track and optimize your sales team in real time
 hero:
   enabled: true
   header: "Connecting <strong>product developers</strong> with <strong>OEM's</strong>"
-  text: Find suitable OEM's for your product and start manufacturing today!
+text: Find suitable <strong> Factories </strong> for your product and start manufacturing today!
   action:
     enabled: true
     label: Start a new Product
@@ -25,14 +25,14 @@ banners:
         path: /images/dashboard.png
         description: An important dashboard image that demonstrations blah
     -
-      title: "<strong>Increase</strong> your <strong>time to market</strong>"
+      title: "<strong>Reduce</strong> your <strong>time to market</strong>"
       text: "Try less DIY-style and collaborate with industry professionals to move efficient and fast."
       image:
         path: /images/dashboard.png
         description: An important dashboard image that demonstrations blah
     -
-      title: "Better project management experience"
-      text: "The entire workflow from conception to boxing captured to allow you an improved overview of your project's life."
+      title: "Save yourself time and costly mistakes"
+      text: "We provide key help on crucial steps of starting mass production."
       image:
         path: /images/dashboard.png
         description: An important dashboard image that demonstrations blah
