Disable about page

--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 ---
 title: Our team
 description: We've built a team with plenty hardware development and factory connections and experience.
+published: false
 ---
 <p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_staff_members/" class="btn"><strong>&#9998;</strong> Manage Staff members</a></p>
 <ul class="staff">
