small updates to the site text

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ banners:
         path: /images/dashboard.png
         description: An important dashboard image that demonstrations blah
     -
-      title: "Save yourself time and costly mistakes"
+      title: "<strong>Save</strong> yourself <strong>time and money</strong>"
       text: "We provide key help on crucial steps of starting mass production."
       image:
         path: /images/dashboard.png
