--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ hero:
     link: /get-started/
   screenshot:
     enabled: true
-    description: Screenshot
-    path: /images/dashboard.png
+    description: Header
+    path: /images/AdobeStock_112754883.jpeg
 
 banners:
   enabled: true
