updated title and description

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-title: The last sales CRM you'll ever need
-description: Track and optimize your sales team in real time
+title: Connecting product developers with factories
+description: Find suitable factories for your product and start manufacturing today!
 
 hero:
   enabled: true
