removed a link heading to a 404

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ hero:
   action:
     enabled: true
     label: Start a new Product
-    link: /get-started/
+    link: #
   screenshot:
     enabled: true
     description: Header
