--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ description: Find suitable factories for your product and start manufacturing to
 
 hero:
   enabled: true
-  header: "Connecting <strong>product developers</strong> with <strong>OEM's</strong>"
+  header: "Connecting <strong>product developers</strong> with <strong>Factories</strong>"
   text: Find suitable <strong> Factories </strong> for your product and start manufacturing today!
   action:
     enabled: true
