--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 title: Contact
 heading: Get in touch today
-description: We'd love to help you improve your sales.
+description: contact@oem-central.com
 
 map:
   latitude: -45.8787605
@@ -15,7 +15,7 @@ map:
 {% if false %}
 <div class="contact-box">
 	<form action="{{ site.baseurl }}/contact-success/" method="post" class="contact-form">
-		<input type="hidden" name="_to" value="support@example.com" />
+		<input type="hidden" name="_to" value="contact@oem-central.com" />
 		<input type="text" name="_gotcha" style="display: none;">
 
 		<label for="name">Full Name</label>
@@ -35,7 +35,7 @@ map:
 		<address><a target="_blank" href="https://www.google.com/maps/place/{{ page.map.address | url_encode }}">{{ page.map.address | replace: ", ", ", <br>" }}</a></address>
 
 		<h3 class="editable">Email</h3>
-		<p><a href="mailto:support@example.com">support@example.com</a></p>
+		<p><a href="mailto:contact@oem-central.com">contact@oem-central.com</a></p>
 	</div>
 </div>
 {% endif %}
