--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ description: Find suitable factories for your product and start manufacturing to
 
 hero:
   enabled: true
-  header: "Connecting <strong>product developers</strong> with <strong>Factories</strong>"
-  text: Find suitable <strong> Factories </strong> for your product and start manufacturing today!
+  header: "Connecting <strong>Product Developers</strong> with <strong>Factories</strong>"
+  text: Find suitable <strong> factories </strong> for your product and start manufacturing today!
   action:
     enabled: true
     label: Start a new Product
