made bottom action button a mail to link
Don't see much of a need for a separate contact page at this stage

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ bottom:
   enabled: true
   header: "<strong>Manufacture</strong> your product now"
   action:
-    label: "Start Manufacturing Now"
-    link: "#"
+    label: "Get in touch!"
+    link: "mailto:contact@oem-central.com"
 ---
 
 {% if page.hero.enabled == true %}
