updated top action button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ hero:
   text: Find suitable <strong> factories </strong> for your product and start manufacturing today!
   action:
     enabled: true
-    label: Start a new Product
+    label: Explore Resources and Factories
     link: #
   screenshot:
     enabled: true
