updated stock images to proper images

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@ banners:
       title: "Find <strong>compatible manufacturers</strong>"
       text: "We connect product developers with the right parties around the world to get your manufacturing done."
       image:
-        path: /images/dashboard.png
+        path: /images/factory-floor.jpeg
         description: An important dashboard image that demonstrations blah
     -
       title: "<strong>Reduce</strong> your <strong>time to market</strong>"
       text: "Try less DIY-style and collaborate with industry professionals to move efficient and fast."
       image:
-        path: /images/dashboard.png
+        path: /images/time-production-line.jpeg
         description: An important dashboard image that demonstrations blah
     -
       title: "<strong>Save</strong> yourself <strong>time and money</strong>"
       text: "We provide key help on crucial steps of starting mass production."
       image:
-        path: /images/dashboard.png
+        path: /images/clock-money.jpeg
         description: An important dashboard image that demonstrations blah
 
 testimonials:
