added hans pic and removed placeholder testimony

--- a/index.html
+++ b/index.html
@@ -43,17 +43,11 @@ testimonials:
     -
       person:
         name: Hans Stam
-        image: https://source.unsplash.com/6anudmpILw4/600x400
+        image: /images/hans.jpg
         role: CPO of OEM Central
       text: Rocket Internet spent half a year and 6 Million Euro on consultants trying to prototype a device. OEM Central co founder Hans Stam delivered a prototype in 1 week and 20k Euro.
 
-    -
-      person:
-        name: Blah
-        image: https://source.unsplash.com/6anudmpILw4/600x400
-        role: CEO of Acme Corp.
-      text: Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.
-
+   
 bottom:
   enabled: true
   header: "<strong>Manufacture</strong> your product now"
