--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@ testimonials:
         image: /images/hans.jpg
         role: CPO of OEM Central
       text: Rocket Internet spent half a year and 6 Million Euro on consultants trying to prototype a device. OEM Central co founder Hans Stam delivered a prototype in 1 week and 20k Euro.
+    -
+      person:
+        name: Mike Richardson
+        image: /images/mike.jpg
+        role: Managing Director of Photonic Insights
+      text: When I heard what OEM Central was building I was so happy to hear about it, I would pay good money just to have a list of factories with their ratings all in one place
 
    
 bottom:
