updated mike testimony

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ testimonials:
       person:
         name: Mike Richardson
         image: /images/mike.jpg
-        role: Managing Director of Photonic Insights
+        role: Managing Director of Photonic Insights / Business Mentor at German Accellerator Southeast Asia
       text: When I heard what OEM Central was building I was so happy to hear about it, I would pay good money just to have a list of factories with their ratings all in one place
 
    
