--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ testimonials:
       person:
         name: Hans Stam
         image: /images/hans.jpg
-        role: CPO of OEM Central
+        role: CPO at OEM Central
       text: Rocket Internet spent half a year and 6 Million Euro on consultants trying to prototype a device. OEM Central co founder Hans Stam delivered a prototype in 1 week and 20k Euro.
     -
       person:
