updated the contact line

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@ testimonials:
    
 bottom:
   enabled: true
-  header: "<strong>Manufacture</strong> your product now"
+  header: "Get in touch!"
   action:
-    label: "Get in touch!"
+    label: "Email"
     link: "mailto:contact@oem-central.com"
 ---
 
