changed header text

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ description: Find suitable factories for your product and start manufacturing to
 hero:
   enabled: true
   header: "Connecting <strong>Product Developers</strong> with <strong>Factories</strong>"
-  text: Find suitable <strong> factories </strong> for your product and start manufacturing today!
+  text: Finding a Factory and starting mass production, <strong>made easy!</strong>
   action:
     enabled: true
     label: Explore Resources and Factories
