--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ banners:
       title: "For <strong>raw materials producers</strong>"
       text: "Find the <strong>factories who need your products</strong>, all in one central place"
       image:
-        path: /images/clock-money.jpeg
+        path: /images/raw-material.jpeg
         
 
 testimonials:
