--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@ banners:
   enabled: true
   content:
     -
-      title: "Find <strong>compatible manufacturers</strong>"
-      text: "We connect product developers with the right parties around the world to get your manufacturing done."
+      title: "For <strong>product developers</strong>"
+      text: "We connect product developers with the right factories to get your mass production started"
       image:
         path: /images/factory-floor.jpeg
         
