--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ hero:
   text: THE WORLD FIRST AND ONLY FACTORY SEARCH ENGINE
   action:
     enabled: true
-    label: Coming soon
+    label: Coming Soon
     link: #
   screenshot:
     enabled: true
