--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ hero:
   screenshot:
     enabled: true
     description: Header
-    path: /images/AdobeStock_112754883.jpeg
+    path: /images/words-cloud-2.jpeg
 
 banners:
   enabled: true
