--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ description: The world first and only factory search engine
 
 hero:
   enabled: true
-  header: "Connecting <strong>Product Developers</strong> with <strong>Factories</strong>"
+  header: "<strong>OEM Central</strong>"
   text: THE WORLD FIRST AND ONLY FACTORY SEARCH ENGINE
   action:
     enabled: true
@@ -19,7 +19,7 @@ banners:
   enabled: true
   content:
     -
-      title: "For <strong>product developers</strong>"
+      title: "For <strong>Product Developers</strong>"
       text: "We connect product developers with the right factories to get your mass production started"
       image:
         path: /images/factory-floor.jpeg
@@ -31,7 +31,7 @@ banners:
         path: /images/time-production-line.jpeg
         
     -
-      title: "For <strong>raw materials producers</strong>"
+      title: "For <strong>Raw Materials Producers</strong>"
       text: "Find the <strong>factories who need your products</strong>, all in one central place"
       image:
         path: /images/raw-material.jpeg
