--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ description: The world first and only factory search engine
 hero:
   enabled: true
   header: "<strong>OEM Central</strong>"
-  text: THE WORLD FIRST AND ONLY FACTORY SEARCH ENGINE
+  text: THE FIRST GLOBAL FACTORY SEARCH ENGINE
   action:
     enabled: true
     label: Coming Soon
@@ -20,7 +20,7 @@ banners:
   content:
     -
       title: "For <strong>Product Developers</strong>"
-      text: "For product developers to find the right factories to get your mass production started"
+      text: "Find the right factories to get your mass production started"
       image:
         path: /images/factory-floor.jpeg
         
