added explore factories resources

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ hero:
   text: THE FIRST GLOBAL FACTORY SEARCH ENGINE
   action:
     enabled: true
-    label: Coming Soon
-    link: #
+    label: Explore Factories
+    link: https://drive.google.com/drive/folders/12PC90GC80pljPbTJFa7nRemYS5u5NMFJ?usp=sharing
   screenshot:
     enabled: true
     description: Header
