attempt to open explore factories in a new tab

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ hero:
     enabled: true
     label: Explore Factories
     link: https://drive.google.com/drive/folders/12PC90GC80pljPbTJFa7nRemYS5u5NMFJ?usp=sharing
+    new_window: true
   screenshot:
     enabled: true
     description: Header
