attempt to open factories in new tab 2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ hero:
   action:
     enabled: true
     label: Explore Factories
-    link: https://drive.google.com/drive/folders/12PC90GC80pljPbTJFa7nRemYS5u5NMFJ?usp=sharing
+    link: https://drive.google.com/drive/folders/12PC90GC80pljPbTJFa7nRemYS5u5NMFJ?usp=sharing :target="_blank"
     new_window: true
   screenshot:
     enabled: true
