--- a/index.html
+++ b/index.html
@@ -48,10 +48,14 @@ testimonials:
         image: /images/mike.jpg
         role: Managing Director at Photonic Insights / Business Mentor at German Accellerator Southeast Asia
       text: When I heard what OEM Central was building I was so happy to hear about it, I would pay good money just to have a list of factories with their ratings all in one place
-
-  
-
-   
+    
+    -
+      person:
+        name: Lukas F. Hartmann
+        image: /images/lukas.jpg
+        role: Founder, Managing Director at MNT Research GmbH
+      text: At it's earliest prototype OEM Central had a list of 5 Hardware Investment firms, and just having all this information in one place already provided a value to me
+ 
 bottom:
   enabled: true
   header: "Get in touch!"
