--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
         <div class="row no-gutters align-items-center ftco-animate">
           <div class="col-md-6 mb-md-0 mb-5">
-            <img src="images/bg_3.jpg"  class="img-fluid">
+            <img src="images/mike.jpg"  class="img-fluid">
           </div>
           <div class="col-md-6 p-md-5">
             <h3 class="h3 mb-4">Mike Richardson</h3>
@@ -191,7 +191,7 @@
         </div>
         <div class="row no-gutters align-items-center ftco-animate">
           <div class="col-md-6 order-md-3 mb-md-0 mb-5">
-            <img src="images/bg_1.jpg"  class="img-fluid">
+            <img src="images/lukas.jpg"  class="img-fluid">
           </div>
           <div class="col-md-6 p-md-5 order-md-1">
             <h3 class="h3 mb-4">Lukas F. Hartmann</h3>
