--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
      <!-- Start Contact -->
 
-    <section class="ftco-section bg-white ftco-slant ftco-slant-dark" id="section-contact">
+  <!--  <section class="ftco-section bg-white ftco-slant ftco-slant-dark" id="section-contact">
       <div class="container">
         <div class="row">
 
@@ -275,7 +275,7 @@
           
         </div>
       </div>
-    </section>
+    </section> -->
 
      <!-- Start Footer -->
 
