added mailto link in footer

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
               <ul class="ftco-footer-social list-unstyled float-md-right float-lft">
                 <li><a href="https://twitter.com/OemCentral"target="_blank"><span class="icon-twitter"></span></a></li>
                 <li><a href="https://www.linkedin.com/company/oem-central/" target="_blank"><span class="icon-linkedin"></span></a></li>
-                
+                <li><a href="mailto:contact@oem-central.com"target="_blank"><span class="icon-email"></span></a></li>
               </ul>
             </div>
           </div>
