update to testomonials text

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <h2 class="text-uppercase ftco-uppercase">Testimonials</h2>
             <div class="row justify-content-center mb-5">
               <div class="col-md-7">
-                <p class="lead">Hear directly from industry professionals what they think about OEM Central.</p>
+                <p class="lead">Hear directly from industry professionals what they think.</p>
               </div>
             </div>
           </div>
