--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
         <div class="row no-gutters align-items-center ftco-animate">
           <div class="col-md-6 mb-md-0 mb-5">
-            <img src="images/mike.jpg"  class="img-fluid">
+            <img src="images/mike2.jpg"  class="img-fluid">
           </div>
           <div class="col-md-6 p-md-5">
             <h3 class="h3 mb-4">Mike Richardson</h3>
