--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li class="nav-item"><a href="#section-services" class="nav-link">Services</a></li>
             <li class="nav-item"><a href="#section-faq" class="nav-link">FAQ</a></li>
             <li class="nav-item"><a href="#section-about" class="nav-link">Testimonials</a></li>
-           <li class="nav-item"><a href="#section-counter" class="nav-link">Fun Facts</a></li>
+           <li class="nav-item"><a href="#section-counter" class="nav-link">Stats</a></li>
           </ul>
         </div>
       </div>
@@ -209,7 +209,7 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-12 text-center ftco-animate">
-            <h2 class="text-uppercase ftco-uppercase">Fun Facts</h2>
+            <h2 class="text-uppercase ftco-uppercase">OEM Central in Numbers</h2>
             <div class="row justify-content-center mb-5">
               <div class="col-md-7">
                 <p class="lead">Some stats about us!</p>
