--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           </div>
           <div class="col-md-6 mb-5 ftco-animate">
             <h3 class="h5 mb-4">Are you looking for investments?</h3>
-            <p>Yes we are! Drop us a line at contact@oem-central.com and we can talk and share our investor pitch deck.</p>
+            <p>Yes we are! Drop us a line at contact@oem-central.com and we can share our investor pitch deck.</p>
             
           </div>
         </div>
