--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="row">
           <div class="col-md-6 mb-5 ftco-animate">
             <h3 class="h5 mb-4">What is OEM Central?</h3>
-            <p>OEM Central aim is to provide the world biggest database of factories, all under one domain, right at your fingertips, easy to discover</p>
+            <p>OEM Central aim is to provide the world biggest database of factories, all under one domain, right at your fingertips, easy to discover.</p>
             
           </div>
           <div class="col-md-6 mb-5 ftco-animate">
@@ -147,7 +147,7 @@
           </div>
           <div class="col-md-6 mb-5 ftco-animate">
             <h3 class="h5 mb-4">How can I get my factory listed?</h3>
-            <p>We are excited to have you onboard, you can drop us a few lines about your factory at contact@oem-central.com and we will list you!.</p>
+            <p>We are excited to have you onboard, you can drop us a few lines about your factory at contact@oem-central.com and we will list you!</p>
             
           </div>
           <div class="col-md-6 mb-5 ftco-animate">
