--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           </div>
 
           <div class="col-lg-4 mb-5 ftco-animate">
-            <figure><img src="images/img_3.jpg" alt="Free Template by Free-Template.co" class="img-fluid"></figure>
+            <figure><img src="images/raw-material.jpeg" alt="Free Template by Free-Template.co" class="img-fluid"></figure>
             <div class="p-3">
               <h3 class="h4">For Raw Materials Producers</h3>
               <p class="mb-4">Find the factories who need your products, all in one central place.</p>
