--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <!-- END row -->
         <div class="row">
           <div class="col-lg-4 mb-5 ftco-animate">
-            <figure><img src="images/img_2.jpg" alt="Free Template by Free-Template.co" class="img-fluid"></figure>
+            <figure><img src="images/img_2.jpg" class="img-fluid"></figure>
             <div class="p-3">
               <h3 class="h4">For Product Developers</h3>
               <p class="mb-4">Find the right factories to get your mass production started.</p>
@@ -86,7 +86,7 @@
           </div>
 
           <div class="col-lg-4 mb-5 ftco-animate">
-            <figure><img src="images/img_1.jpg" alt="Free Template by Free-Template.co" class="img-fluid"></figure>
+            <figure><img src="images/time-production-line.jpeg" class="img-fluid"></figure>
             <div class="p-3">
               <h3 class="h4">For Factories</h3>
               <p class="mb-4">Find new customers and grow your manufacturing potential on a new digital platform.</p>
@@ -99,7 +99,7 @@
           </div>
 
           <div class="col-lg-4 mb-5 ftco-animate">
-            <figure><img src="images/raw-material.jpeg" alt="Free Template by Free-Template.co" class="img-fluid"></figure>
+            <figure><img src="images/raw-material.jpeg" class="img-fluid"></figure>
             <div class="p-3">
               <h3 class="h4">For Raw Materials Producers</h3>
               <p class="mb-4">Find the factories who need your products, all in one central place.</p>
