--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           <div class="col-md ftco-animate">
             <div class="ftco-counter text-center">
               <span class="ftco-number" data-number="34146">0</span>
-              <span class="ftco-label">Lines of Codes</span>
+              <span class="ftco-label">Lines of Code</span>
             </div>
           </div>
           <div class="col-md ftco-animate">
