--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
         <div class="row no-gutters align-items-center ftco-animate">
           <div class="col-md-6 mb-md-0 mb-5">
-            <img src="images/mike2.jpg"  class="img-fluid">
+            <img src="images/mike2.jpg"  class="img-fluid" class="rounded-circle">
           </div>
           <div class="col-md-6 p-md-5">
             <h3 class="h3 mb-4">Mike Richardson</h3>
@@ -190,7 +190,7 @@
         </div>
         <div class="row no-gutters align-items-center ftco-animate">
           <div class="col-md-6 order-md-3 mb-md-0 mb-5">
-            <img src="images/lukas.jpg"  class="img-fluid">
+            <img src="images/lukas.jpg"  class="img-fluid" class="rounded-circle">
           </div>
           <div class="col-md-6 p-md-5 order-md-1">
             <h3 class="h3 mb-4">Lukas F. Hartmann</h3>
