--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="col-md-10">
             <h1 class="ftco-heading ftco-animate">OEM Central</h1>
             <h2 class="h5 ftco-subheading mb-5 ftco-animate">THE FIRST GLOBAL FACTORY SEARCH ENGINE</h2>    
-            <p><a href="https://drive.google.com/open?id=12PC90GC80pljPbTJFa7nRemYS5u5NMFJ" target="_blank" class="btn btn-primary ftco-animate">Early Access</a></p>
+            <p><a href="#" target="_blank" class="btn btn-primary ftco-animate">Coming Soon</a></p>
           </div>
         </div>
       </div>
